# peck-mcp

./: .dockerignore  .gcloudignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  HACKATHON_SUBMISSION.md  LICENSE  README.md  RUN_LOG.md  check_sig.ts  cloudbuild-mcp.yaml  node_modules  package-lock.json  package.json  tsconfig.json  tsconfig.publish.json
archive/: AGENTIC_PAY_DISPATCH.md  ORCHESTRATOR_DISPATCH.md
dashboard/: main.py  requirements.txt
docs/: index.html
infra/: bank-local.compose.yml  storage-local.compose.yml
openrun/: .sesskey  Dockerfile  README.md  app.py  cloudbuild.yaml  content.py  requirements.txt
scripts/: _gen-cls-batch2.ts  beacon-like.ts  beacon_wave6_8.ts  bible-completer-db.ts  bible-completer.ts  bible-liker.ts  bible-poster.ts  bible-retro-tagger.ts  bootstrap-profiles.ts  bootstrap-scribes.ts  build-tiny-ladder.ts  classics-historian-run.ts  classics-poster.ts  consolidate-dust.ts  coverage-audit.ts  cross-ref-poster.ts  fire-meaningful-ladder.ts  fleet-hybrid-v2.ts  flint-reflection-posts.ts  fund-address.ts  fund-autonomous-agents.ts  fund-bank-local-brc29.ts  fund-brc-chain.ts  fund-brc-wallets.ts  fund-fanout.ts  fund-fleet-mainnet.ts  fund-memory-agent.ts  fund-one-brc29.ts  fund-p2pkh-fanout.ts  klio-wave4.ts  liker-p2pkh-parallel.ts  liker-p2pkh.ts  nyx-closing-wave.ts  nyx-self-reflection.ts  orphan-hunter.ts  peck-evangelist.ts  peck-init.ts  refund-agents-bulk.ts  refund-autonomous-agents.ts  refund-gateway.ts  (+19 more)
src/: a2a-protocol.ts  agent-a.ts  agent-b.ts  bin.ts  (+26 more)
zeta/wasm/: Cargo.toml
zeta/wasm/src/: lib.rs
(+268 files in other folders)
