[package]
name = "zeta-wasm"
version = "0.1.0"
edition = "2021"
description = "Zeta compiler WASM wrapper for crypto core functions"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link Time Optimization for smaller binary
strip = true         # Strip symbols
panic = "abort"      # Abort on panic to save space
codegen-units = 1    # Maximize size reduction
